slight reconfigs
